--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -175,16 +175,16 @@ img {
 
 .home__container{
   padding-block: 9rem 3rem;
-  row-gap: 3rem;
+  row-gap: 3rem !important;
 }
 
 .home__data{
   text-align: center;
-  row-gap: 3.5rem;
+  row-gap: 3.5rem !important;
 }
 
 .home__content{
-  row-gap: 0.75rem;
+  row-gap: 0.75rem !important;
 }
 
 .home__stars{
@@ -211,7 +211,7 @@ img {
   font-weight: var(--font-semi-bold);
   display: inline-flex;
   align-items: center;
-  column-gap: 1.5rem;
+  column-gap: 1.5rem !important;
   transition: border-color 0.4s;
 }
 
@@ -285,8 +285,8 @@ img {
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
 @media  screen and (max-width:320px) {
-  .container{
-    margin-inline: 1rem;
+  .nav{
+    justify-items: center;
   }
   .home__info{
     flex-direction: column;
@@ -300,6 +300,10 @@ img {
 
 /* For medium devices */
 @media screen and (min-width:576px) {
+  .nav{
+    justify-content: space-between;
+    padding: 0px 20px;
+  }
   .home__container{
     grid-template-columns: 400px;
     justify-content: center;
